Added input module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,15 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.0)
 project(RubiksCube C)
 
+if (NOT CMAKE_BUILD_TYPE)
+    message(STATUS "No build type selected, default to Release")
+    set(CMAKE_BUILD_TYPE "Release")
+endif ()
+
+set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_C_STANDARD 11)
+include_directories(src)
 
 add_executable(RubiksCube
         src/cube_main.c
@@ -9,4 +17,6 @@ add_executable(RubiksCube
         src/rotation.c
         src/cube.h
         src/cube.c
-        src/command.h)
+        src/command.h
+        src/input.h
+        src/input.c)
